--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,38 @@
 version: 2
 jobs:
-  build_blah:
+  website:
+    working_directory: ~/project/website
     docker:
-      - image: alpine:latest
+      - image: hashicorp/middleman-hashicorp:0.3.35
     steps:
-      - checkout
-      - run: echo "build"
-  test:
-    docker:
-      - image: alpine:latest
-    steps:
-      - checkout
-      - run: echo "test"
+      - checkout:
+          path: ~/project
+
+      - run:
+          name: bundler version
+          command: bundle -v 
+      
+      #cache gems
+      - restore_cache:
+          key: alvintest-gems-v1-website-{{ checksum "Gemfile.lock" }}
+
+      - run:
+          command: bundle check || bundle install 
+      
+      - save_cache:
+          key: alvintest-gems-v1-website-{{ checksum "Gemfile.lock" }}
+          paths:
+            - ~/project/website/vendor/bundle
+      
+      # middleman build
+      - run:
+          command: pwd && ls -lah && echo "hello world" 
+
 workflows:
   version: 2
-  build_and_test:
+  build-website:
     jobs:
-      - build_blah
-      - test
+      - website:
+          filters:
+            branches:
+              only: stable-website
