--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,4 @@ workflows:
           context: static-sites
           filters:
             branches:
-              only: blah
+              only: orig
